welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: value =< is not a member of Int
	if(a>=13 && a=<19 ){
                     ^